# mcraw-tui

./: .gitignore  CREDITS.md  Cargo.toml  README.md  TODO.md  build.rs  desktop.ini  ffmpeg_debug.txt  mcraw-tui.rb
.github/workflows/: build.yml
assets/: placeholder.sixel
bucket/: mcraw-tui.json
examples/: gpu_validate.rs
shaders/: preview.wgsl  rcd_conv.wgsl  rcd_fill.wgsl
src/: agx.rs  allocator.rs  app.rs  c_api.cpp  c_api.h  cli.rs  color.rs  decoder.rs  dng_writer.rs  encoder.rs  error.rs  export.rs  file.rs  file_browser.rs  gpu.rs  gradient.rs  grading.rs  hardware.rs  lib.rs  main.rs  metadata.rs  pipeline.rs  preset.rs  stats.rs  terminal.rs  thumbnail.rs  thumbnail_worker.rs  ui.rs
src/preview/: mod.rs  state.rs
src/preview/encoders/: mod.rs
src/preview/pipeline/: cache.rs  device.rs  mod.rs  params.rs  pipeline.rs  shaders.rs
tests/: export_stats_smoke.rs
